--- a/package.json
+++ b/package.json
@@ -14,6 +14,19 @@
 		   ]
 		},
 		{
+			"name" 			: "Default",
+			"file_name"		: "ApexClassWithoutSharing.cls",
+			"description" 	: "Adashko test for an Apex Class",
+			"author" 		: "Adashko",
+			"params" 		: [ 
+		        {   
+		            "name"          : "api_name",
+		            "description"   : "Apex Class API Name",
+		            "default" 		: "MyApexClass"
+		        }
+		   ]
+		},
+		{
 			"name" 			: "Batch",
 			"file_name"		: "BatchApexClass.cls",
 			"description" 	: "Batch Apex Class",
